script files added ...

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: r
 cache: packages
+install:
+  - Rscript -e 'install.packages(c("devtools","roxygen2","testthat"));devtools::install_deps("lab3package")'
+script:
+  - Rscript -e 'devtools::check("lab3package")'
