--- a/lab3package/DESCRIPTION
+++ b/lab3package/DESCRIPTION
@@ -4,7 +4,8 @@ Title: Calculates gcd and dijkstras algorithm
 Version: 1.0
 Date: 2021-09-09
 Author: Who wrote it
-Maintainer: not sure
-Description: As the title says basically ...
+Maintainer: johan <marbinah@kth.se>
+Description: As the title says basically
 License: What license is it under?
 RoxygenNote: 7.1.1
+Encoding: UTF-8
