--- a/lab3package/DESCRIPTION
+++ b/lab3package/DESCRIPTION
@@ -5,7 +5,8 @@ Version: 1.0
 Date: 2021-09-09
 Author: Who wrote it
 Maintainer: johan <marbinah@kth.se>
-Description: As the title says basically
+Description: As the title says basically. Implements both dijkstras and euclidean algorithm. 
 License: What license is it under?
 RoxygenNote: 7.1.1
 Encoding: UTF-8
+LazyData: true
